# mcp-server-motherduck

./: .gitignore  DEVELOPMENT.md  README.md  makefile  pyproject.toml  run
.github/workflows/: publish.yml  python-publish.yml
src/mcp_server_motherduck/: __init__.py  __main__.py  configs.py  database.py  prompt.py  server.py
